<resources>
    <string name="app_name">Pills Time</string>
    <string name="splash_screen_logo_desc">Splash screen logo</string>
    <string name="exit">Exit</string>
    <string name="pills_time_slogan">Easy Reminder, Easy Tracking</string>
    <string name="pillsTime_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="well_being_image">Well Being Imge</string>
    <string name="pills_time_logo">Pills Time Logo</string>
    <string name="huawei_logo">Huawei logo</string>
    <string name="continue_with_huawei_id">Continue with Huawei Id</string>
    <string name="reg">Reg</string>
    <string name="search_for_medicine">Search for Medicine</string>
    <string name="back">Back</string>
    <string name="no_medicines_found">No medicines found</string>
    <string name="no_meds_found_text">Sorry for the inconvieniences.\n We would want you to consult a doctor for your treatment. Please click below to view the nearby hospitals</string>
    <string name="locate_hospitals_in_search_meds">Locate Hospitals/Pharmacies near me</string>
    <string name="start_typing_your_symptoms">Start typing your symptoms</string>
    <string name="statistics">Statistics</string>
    <string name="detailed_statistics">Detailed Statistics</string>
    <string name="dolo_650">Dolo-650</string>
    <string name="medicinal_benefits">Medicinal Benefits</string>
    <string name="benefits_desc">Dolo-650 Tablet 15\'s contains \'Paracetamol\' which is a mild analgesic and fever reducer. Dolo-650 Tablet 15\'s can also be used to treat mild to moderate pain in conditions of headache, toothache, backache, period pain, and muscle pain. It has less gastric irritating properties compared to other pain killers like aspirin and ibuprofen. It is the drug of the first choice for reducing fever suitable for all age groups (from children of 2 months to the elderly).</string>
    <string name="directions_for_use">Directions for Use</string>
    <string name="directions_of_user_desc">Swallow the tablet whole with a glass of water before or after the meals. It is recommended to take a tablet after food to avoid any gastrointestinal irritation. Do not chew, crush, or break it. If you cannot swallow the tablet as a whole, you may break the pill into half and take both halves</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dash</string>
    <string name="medical_suggestions">Medical Suggestions</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_medication">Add medication</string>
    <string name="hello">Hello</string>
    <string name="michella">Michella</string>
    <string name="here_s_what_you_have_for_today">Here’s what you have for today</string>
    <string name="no_reminders_image">No reminders image</string>
    <string name="no_reminders_for_today">No Reminders for today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="add_new_medication">Add new Medication</string>
    <string name="name_of_the_medication">Name of the Medication</string>
    <string name="brand">Brand</string>
    <string name="medical_history">Medical History</string>
    <string name="recommended_doctor">Recommended Doctor</string>
    <string name="scan_and_fetch_medicine_details">Scan and Fetch Medicine Details</string>
    <string name="relax_while_we_fetch_the_medicine_details_for_you">Relax while we fetch the medicine details for you</string>
    <string name="get_dedicated_medical_recommendations_for_your_symptoms">Get dedicated medical recommendations for your symptoms</string>
    <string name="finish">Finish</string>
    <string name="no_of_doses">No of Doses</string>
    <string name="add_new_dose">Add Dose</string>
    <string name="no_of_units_left">No.of units left</string>
    <string name="instructions">Instructions</string>
    <string name="ringing_at">Will Notify @</string>
    <string name="time">Click to select time</string>
    <string name="add">ADD</string>
    <string name="units">Units</string>
    <string name="add_dose">ADD DOSE</string>
    <string name="click_to_select_start_date">Click to select Start Date</string>
    <string name="how_long_days">How long?(days)</string>
    <string name="na">NA</string>
    <string name="deletetime">deleteTime</string>
    <string name="locate_hospitals_and_pharmacies">Locate Hospitals and Pharmacies</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="enter_the_name_of_the_medicine">Enter the name of the medicine</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="height">height</string>
    <string name="weight">Weight</string>
    <string name="update_profile">UPDATE DETAILS</string>
</resources>