<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNewMedication">

    <!--Back-->
    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/back"
        android:textColor="@color/links"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Next-->
    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/next"
        android:textColor="@color/links"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Add new medication-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/add_new_medication"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--name of the medication-->
    <EditText
        android:id="@+id/name_of_the_medication"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:autofillHints="Name"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name_of_the_medication"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/brand"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:autofillHints="Distributor"
        android:background="@drawable/edit_text_border"
        android:hint="@string/distributor"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_of_the_medication" />

    <EditText
        android:id="@+id/MedicalHistory"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:autofillHints="Medical History"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:hint="@string/medical_history"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand" />

    <EditText
        android:id="@+id/RecommendBy"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:autofillHints="Recommended Doctor"
        android:background="@drawable/edit_text_border"
        android:hint="@string/recommended_doctor"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MedicalHistory" />

    <Button
        android:id="@+id/scan_and_fetch_details_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        android:background="@color/black"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/scan_and_fetch_medicine_details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/RecommendBy" />

    <TextView
        android:id="@+id/relax_text_under_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/relax_while_we_fetch_the_medicine_details_for_you"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_and_fetch_details_button" />

    <TextView
        android:id="@+id/medicalSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/medical_suggestions"
        android:textColor="@color/links"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relax_text_under_button" />

    <TextView
        android:id="@+id/text_under_MedicalSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/get_dedicated_medical_recommendations_for_your_symptoms"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicalSuggestions" />
</androidx.constraintlayout.widget.ConstraintLayout>