<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".LoginActivity">

        <!--Exit-->
        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Temporary Link for Registration Page-->
        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/reg"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Pills Time Logo-->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="149dp"
            android:layout_height="129dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/pills_time_logo"
            android:src="@drawable/pills_time_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit"
            app:layout_constraintVertical_bias="0.099" />

        <!--Pills Time Slogan-->
        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/pills_time_slogan"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/pills_time_slogan"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo"
            app:layout_constraintVertical_bias="0.038"
            tools:ignore="UnusedAttribute" />

        <!--Stick to the bottom-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp">

            <!--Wellbeing Slogan-->
            <ImageView
                android:id="@+id/wellBeingImage"
                android:layout_width="70dp"
                android:layout_height="41dp"
                android:layout_marginTop="232dp"
                android:contentDescription="@string/well_being_image"
                android:src="@drawable/wellbeing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--App description-->
            <TextView
                android:id="@+id/app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/pillsTime_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wellBeingImage"
                tools:ignore="UnusedAttribute" />

            <!--Continue with Huawei ID-->
            <ImageView
                android:id="@+id/continueWithHuaweiId"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:contentDescription="@string/continue_with_huawei_id"
                android:src="@drawable/continue_with_huawei_id_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>