<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MedicalSuggestions"
        android:background="@color/white">

        <!--Back-->
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/back"
            android:textColor="@color/links"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Temporary Link for Registration Page-->
        <TextView
            android:id="@+id/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/statistics"
            android:textColor="@color/links"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/edit_text_circular_border"
            android:fontFamily="@font/roboto_thin"
            android:hint="@string/start_typing_your_symptoms"
            android:padding="10dp"
            android:autofillHints=""
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginLeft="25dp"
            android:drawableEnd="@drawable/search"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toTopOf="parent"
            />
        <!--Search for medicines container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search"
            android:layout_marginTop="80dp"
            >
            <!--Search for medicines-->
            <ImageView
                android:id="@+id/search_image"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:src="@drawable/search_for_medicine"
                android:contentDescription="@string/search_for_medicine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--No medicine found for the disease specified container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search"
            android:layout_marginTop="60dp">

            <!--No medicine found for the disease specified-->
            <ImageView
                android:id="@+id/no_suggestions_image"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:src="@drawable/could_not_fetch_medicine_details"
                android:contentDescription="@string/no_medicines_found"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Inconviniences text-->
            <TextView
                android:id="@+id/inconvieniences_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/no_meds_found_text"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/no_suggestions_image"
                tools:layout_editor_absoluteX="25dp" />
            <!--Locate Links-->
            <TextView
                android:id="@+id/locate_hospitals_and_pharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/roboto"
                android:text="@string/locate_hospitals_in_search_meds"
                android:layout_marginTop="10dp"
                android:textColor="@color/links"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/inconvieniences_text"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
